--- a/refer-effect/gameEffect/quiz/quiz02.html
+++ b/refer-effect/gameEffect/quiz/quiz02.html
@@ -39,6 +39,7 @@
             linear-gradient(transparent 0px, transparent 1px, #f6f6f6 1px, #f6f6f6 99px, transparent 99px, transparent 100px),
             linear-gradient(#cdcccc, #cdcccc);
             background-size:100px 100%, 100% 100px, 100% 10px, 10px 100%, 100% 100px, 100px 100%, 100px 100%, 100px 100px, 100px 100px;
+            padding: 100px 0;
         }
         a {
             text-decoration: none;
@@ -126,15 +127,15 @@
             float: left;
         } */
 
-        .quiz-wrap {
+        .quizwrap {
             max-width: 500px;
             width: 100%;
             background: #fff;
-            margin: 100px auto;
+            margin: 50px auto;
             border: 6px ridge #a5a5a5;
         }
 
-        .quiz-wrap h2{
+        .quizwrap h2{
             font-size: 14px;
             text-align: center;
             background: #cacaca;
@@ -144,7 +145,7 @@
             position: relative;
         }
 
-        .quiz-wrap h2::before {
+        .quizwrap h2::before {
             content: "";
             position: absolute;
             left: 0; top: 2px;
@@ -153,7 +154,7 @@
             background-size: cover;
         }
 
-        .quiz-wrap h2::after {
+        .quizwrap h2::after {
             content: "";
             position: absolute;
             right: 2px; top: 2px;
@@ -162,30 +163,31 @@
             background-size: cover;
         }
 
-        .quiz-wrap .quiz {
+        .question__quiz {
             border: 4px ridge #cacaca;
         }
 
-        .quiz-wrap .quiz .question {
-            border-bottom: 4px ridge #a5a5a5;
-            padding: 13px 30px 20px;
-            font-size: 24px;
-            line-height: 1.4;
+        .question__title {
+            padding: 20px;
+            border-bottom: 6px ridge #cacaca;
         }
 
-        .quiz-wrap .quiz .question::before {
-            content: "Q.";
+        .question__title__num {
             color: #A5E151;
-            font-size: 50px;
-            padding-right: 5px;
+            font-size: 34px;
             text-shadow: 1px 1px 1px #000;
         }
 
-        .quiz-wrap .quiz .answer {
+        .question__title__num::after {
+            content: '.';
+            font-size: 20px;
+        }
+
+        .question__answerr {
             background: #e8e7e8;
             padding: 20px;
         }
-        .quiz-wrap .quiz .answer .answer-confirm {
+        .question__answer__confirm {
             font-family: "DungGeunMo";
             background: #cacaca;
             text-align: center;
@@ -196,11 +198,11 @@
             width: 100%;
         }
 
-        .quiz-wrap .quiz .answer .answer-confirm:active {
+        .answer-confirm:active {
             background: #a3a3a3;
         }
 
-        .quiz-wrap .quiz .answer .answer-view {
+        .question__answer__view {
             font-family: "DungGeunMo";
             background: #cacaca;
             text-align: center;
@@ -209,9 +211,8 @@
             font-size: 22px;
             text-shadow: 1px 1px 1px #fff;
             width: 100%;
-            display: none;
         }
-        .quiz-wrap .quiz .answer .answer-view:active {
+        .question__answer__view:active {
             background: #a3a3a3;
         }
 
@@ -584,8 +585,8 @@
         <h1>Quiz</h1>
         <nav class="show">
             <ul>
-                <li class="active"><a href="quiz01.html">주관식 한 문제</a></li>
-                <li><a href="quiz02.html">주관식 여러 문제</a></li>
+                <li><a href="quiz01.html">주관식 한 문제</a></li>
+                <li class="active"><a href="quiz02.html">주관식 여러 문제</a></li>
                 <li><a href="quiz03.html">객관식 한 문제</a></li>
                 <li><a href="quiz04.html">객관식 여러 문제</a></li>
                 <li><a href="quiz05.html">객관식 문제 : 이미지 슬라이드</a></li>
@@ -596,12 +597,15 @@
         </div>
     </header>
 
-    <div class="quiz-wrap">
+    <div class="quizwrap">
         <h2>넌센스 퀴즈</h2>
-        <div class="quiz">
-            <h3 class="question"></h3>
-            <div class="answer">
-                <div class="answer-img">
+        <div class="question__quiz">
+            <h3 class="question__title">
+                <span class="question__title__num"></span>
+                <span class="question__title__ask"></span>
+            </h3>
+            <div class="question__answer">
+                <div class="question__quiz__img">
                     <div class="card">
                         <div class="dog">
                         <div class="head">
@@ -623,40 +627,172 @@
                         </div>
                     </div>
                 </div>
-                <button class="answer-confirm">정답 확인하기</button>
-                <div class="answer-view"></div>
+                <button class="question__answer__confirm">정답 확인하기</button>
+                <div class="question__answer__view"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quizwrap">
+        <h2>웹디자인 기능사</h2>
+        <div class="question__quiz">
+            <h3 class="question__title">
+                <span class="question__title__num"></span>
+                <span class="question__title__ask"></span>
+            </h3>
+            <div class="question__answer">
+                <div class="question__quiz__img">
+                    <div class="card">
+                        <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                            <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                            <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="question__answer__confirm">정답 확인하기</button>
+                <div class="question__answer__view"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quizwrap">
+        <h2>웹디자인 기능사</h2>
+        <div class="question__quiz">
+            <h3 class="question__title">
+                <span class="question__title__num"></span>
+                <span class="question__title__ask"></span>
+            </h3>
+            <div class="question__answer">
+                <div class="question__quiz__img">
+                    <div class="card">
+                        <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                            <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                            <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="question__answer__confirm">정답 확인하기</button>
+                <div class="question__answer__view"></div>
             </div>
         </div>
     </div>
 
 <script>
-
-    //퀴즈
-    const answerquestion = document.querySelector(".question");
-    const answerConfirm = document.querySelector(".answer-confirm");
-    const answerView = document.querySelector(".answer-view");
-
-    //문제 정보
-    const quizAsk = "채소 장사꾼이 제일 싫어하는 도시는?";
-    const quizAnswer = "시드니";
-
-    //문제 출력
-    answerquestion.innerHTML = quizAsk;
-    answerView.innerHTML = quizAnswer;
-
-    //정답 확인
-    answerConfirm.addEventListener("click",()=>{
-        answerConfirm.style.display = "none";
-        answerView.style.display = "block";
-        document.querySelector(".card").classList.toggle("good");
-    })
-
-
     //메뉴
     document.querySelector(".ham").addEventListener("click", () => {
         document.querySelector("nav").classList.toggle("show");
     })
 
+    //선택자
+    const quizwrap = document.querySelector(".quizWrap");
+    const questionQuiz = document.querySelector(".question__quiz");
+    const questionTitle = document.querySelector(".question__title");
+    const questionTitleNum = document.querySelectorAll(".question__title__num");
+    const questionTitleAsk = document.querySelectorAll(".question__title__ask");
+    const questionAnswer = document.querySelector(".question__answer");
+    const questionAnswerImg = document.querySelector(".question__answer__img");
+    const questionAnswerConfirm = document.querySelectorAll(".question__answer__confirm");
+    const questionAnswerView = document.querySelectorAll(".question__answer__view");
+
+    //문제 정보
+    const quizInfo = [
+        {
+            quizNum : 1,
+            quizAsk : "채소장사꾼이 제일 싫어하는 외국의 도시는?",
+            quizAnswer : "시드니"
+            
+        },
+        {
+            quizNum : 2,
+            quizAsk : "가장 비싼 새는?",
+            quizAnswer : "백조"
+        },
+        {
+            quizNum : 3,
+            quizAsk : "소녀가 강으로 여행가면?",
+            quizAnswer : "걸리버 여행"
+        }
+    ]
+
+    //문제 출력
+    // questionTitleNum[0].innerHTML = quizInfo[0].quizNum;
+    // questionTitleNum[1].innerHTML = quizInfo[1].quizNum;
+    // questionTitleNum[2].innerHTML = quizInfo[2].quizNum;
+
+    // questionTitleAsk[0].innerHTML = quizInfo[0].quizAsk;
+    // questionTitleAsk[1].innerHTML = quizInfo[1].quizAsk;
+    // questionTitleAsk[2].innerHTML = quizInfo[2].quizAsk;
+
+    // questionAnswerView[0].innerHTML = quizInfo[0].quizAnswer;
+    // questionAnswerView[1].innerHTML = quizInfo[1].quizAnswer;
+    // questionAnswerView[2].innerHTML = quizInfo[2].quizAnswer;
+
+    // for( i=0; i<=100; i++){
+    //     questionTitleNum[i].innerHTML = quizInfo[i].quizNum;
+    //     questionTitleAsk[i].innerHTML = quizInfo[i].quizAsk;
+    //     questionAnswerView[i].innerHTML = quizInfo[i].quizAnswer;
+    // }
+
+    quizInfo.forEach((el,i)=>{
+        questionTitleNum[i].innerHTML = quizInfo[i].quizNum;
+        questionTitleAsk[i].innerHTML = quizInfo[i].quizAsk;
+        questionAnswerView[i].innerHTML = quizInfo[i].quizAnswer;
+    });
+
+    //정답 숨기기
+    //questionAnswerConfirm 정답확인하기
+    //questionAnswerView 답나오는곳
+
+    questionAnswerView.forEach(el => {
+        el.style.display = "none";
+    })
+
+    //정답확인
+    // questionAnswerConfirm.forEach((el)=>{
+    //     el.addEventListener("click",function(){
+    //         el.style.display = "none";
+    //         questionAnswerView.forEach((e)=>{
+    //             e.style.display = "block";
+    //         })
+
+    //     })
+    // })
+
+    questionAnswerConfirm.forEach((el,idx)=>{
+        el.addEventListener("click",function(){
+            this.style.display = "none";
+            this.nextElementSibling.style.display = "block";
+            document.querySelectorAll('.card')[idx].classList.add('good');
+        })
+    })
 
 
 </script>
