--- a/refer-effect/gameEffect/quiz/quiz04.html
+++ b/refer-effect/gameEffect/quiz/quiz04.html
@@ -39,6 +39,7 @@
             linear-gradient(transparent 0px, transparent 1px, #f6f6f6 1px, #f6f6f6 99px, transparent 99px, transparent 100px),
             linear-gradient(#cdcccc, #cdcccc);
             background-size:100px 100%, 100% 100px, 100% 10px, 10px 100%, 100% 100px, 100px 100%, 100px 100%, 100px 100px, 100px 100px;
+            padding: 100px 0;
         }
         a {
             text-decoration: none;
@@ -126,15 +127,15 @@
             float: left;
         } */
 
-        .quiz-wrap {
+        .quizwrap {
             max-width: 500px;
             width: 100%;
             background: #fff;
-            margin: 100px auto;
+            margin: 50px auto;
             border: 6px ridge #a5a5a5;
         }
 
-        .quiz-wrap h2{
+        .quizwrap h2{
             font-size: 14px;
             text-align: center;
             background: #cacaca;
@@ -144,8 +145,8 @@
             position: relative;
         }
 
-        .quiz-wrap h2::before {
-            content: "";
+        .quizwrap h2::before {
+            content: '';
             position: absolute;
             left: 0; top: 2px;
             width: 15px; height: 15px;
@@ -153,8 +154,8 @@
             background-size: cover;
         }
 
-        .quiz-wrap h2::after {
-            content: "";
+        .quizwrap h2::after {
+            content: '';
             position: absolute;
             right: 2px; top: 2px;
             width: 35px; height: 15px;
@@ -162,30 +163,37 @@
             background-size: cover;
         }
 
-        .quiz-wrap .quiz {
+        .quizConfirm {
+            max-width: 500px;
+            height: 100vh;
+            margin: 0 auto;
+        }
+
+        .question__quiz {
             border: 4px ridge #cacaca;
         }
 
-        .quiz-wrap .quiz .question {
-            border-bottom: 4px ridge #a5a5a5;
-            padding: 13px 30px 20px;
-            font-size: 24px;
-            line-height: 1.4;
+        .question__title {
+            padding: 20px;
+            border-bottom: 6px ridge #cacaca;
         }
 
-        .quiz-wrap .quiz .question::before {
-            content: "Q.";
+        .question__title__num {
             color: #A5E151;
-            font-size: 50px;
-            padding-right: 5px;
+            font-size: 34px;
             text-shadow: 1px 1px 1px #000;
         }
 
-        .quiz-wrap .quiz .answer {
+        .question__title__num::after {
+            content: '.';
+            font-size: 20px;
+        }
+
+        .question__answerr {
             background: #e8e7e8;
             padding: 20px;
         }
-        .quiz-wrap .quiz .answer .answer-confirm {
+        .question__answer__confirm {
             font-family: "DungGeunMo";
             background: #cacaca;
             text-align: center;
@@ -196,11 +204,11 @@
             width: 100%;
         }
 
-        .quiz-wrap .quiz .answer .answer-confirm:active {
+        .answer-confirm:active {
             background: #a3a3a3;
         }
 
-        .quiz-wrap .quiz .answer .answer-view {
+        .question__answer__view {
             font-family: "DungGeunMo";
             background: #cacaca;
             text-align: center;
@@ -211,8 +219,60 @@
             width: 100%;
             display: none;
         }
-        .quiz-wrap .quiz .answer .answer-view:active {
+        .question__answer__ex {
+            padding: 20px;
+            line-height: 1.4;
+        }
+
+        .question__answer__view:active {
             background: #a3a3a3;
+        }
+
+        .question__answer__selects {
+            padding: 10px;
+        }
+
+        .question__answer__selects p {
+            line-height: 1.4;
+            font-size: 16px;
+        }
+        .question__answer__selects label {
+            display: flex;
+            position: relative;
+            overflow: hidden;
+            margin-bottom: 5px;
+        }
+        .question__answer__selects label span {
+            font-size: 20px;
+            line-height: 1;
+            padding: 11px 35px 11px 50px;
+            border-radius: 50px;
+            position: relative;
+            min-height: 40px;
+        }
+        .question__answer__selects label span:hover {
+            background-color: #d6ecb6;
+        }
+        .question__answer__selects label span::before {
+            content: '';
+            background-color: #fff;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            box-shadow: inset 0 0 0 3px #000;
+            position: absolute;
+            left: 7px; top: 6px;
+            transition: 0.25s ease;
+        }
+        .question__answer__selects label input {
+            position: absolute;
+            left: -9999px;
+        }
+        .question__answer__selects input:checked + span {
+            background-color: #d6ecb6;     
+        }
+        .question__answer__selects input:checked + span:before {
+            box-shadow: inset 0 0 0 10px #A5E151;
         }
 
 
@@ -221,6 +281,7 @@
             position: relative;
             width: 360px;
             margin: 30px auto;
+            display: none;
             }
         .dog .head,
         .dog .body {
@@ -584,10 +645,10 @@
         <h1>Quiz</h1>
         <nav class="show">
             <ul>
-                <li class="active"><a href="quiz01.html">주관식 한 문제</a></li>
+                <li><a href="quiz01.html">주관식 한 문제</a></li>
                 <li><a href="quiz02.html">주관식 여러 문제</a></li>
                 <li><a href="quiz03.html">객관식 한 문제</a></li>
-                <li><a href="quiz04.html">객관식 여러 문제</a></li>
+                <li class="active"><a href="quiz04.html">객관식 여러 문제</a></li>
                 <li><a href="quiz05.html">객관식 문제 : 이미지 슬라이드</a></li>
             </ul>
         </nav>
@@ -595,69 +656,143 @@
             <span></span>
         </div>
     </header>
+    <main id="quiz">
 
-    <div class="quiz-wrap">
-        <h2>넌센스 퀴즈</h2>
-        <div class="quiz">
-            <h3 class="question"></h3>
-            <div class="answer">
-                <div class="answer-img">
-                    <div class="card">
-                        <div class="dog">
-                        <div class="head">
-                            <div class="ears"></div>
-                            <div class="face"></div>
-                            <div class="eyes">
-                            <div class="teardrop"></div>
-                            </div>
-                            <div class="nose"></div>
-                            <div class="mouth">
-                            <div class="tongue"></div>
-                            </div>
-                            <div class="chin"></div>
-                        </div>
-                        <div class="body">
-                            <div class="tail"></div>
-                            <div class="legs"></div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="answer-confirm">정답 확인하기</button>
-                <div class="answer-view"></div>
-            </div>
-        </div>
+    </main>
+
+    <div class="quizConfirm">
+        <button class="question__answer__confirm">정답 확인하기</button>
+        <div class="question__answer__view"></div>
+        <div class="question__answer__ex"></div>
     </div>
-
 <script>
-
-    //퀴즈
-    const answerquestion = document.querySelector(".question");
-    const answerConfirm = document.querySelector(".answer-confirm");
-    const answerView = document.querySelector(".answer-view");
-
-    //문제 정보
-    const quizAsk = "채소 장사꾼이 제일 싫어하는 도시는?";
-    const quizAnswer = "시드니";
-
-    //문제 출력
-    answerquestion.innerHTML = quizAsk;
-    answerView.innerHTML = quizAnswer;
-
-    //정답 확인
-    answerConfirm.addEventListener("click",()=>{
-        answerConfirm.style.display = "none";
-        answerView.style.display = "block";
-        document.querySelector(".card").classList.toggle("good");
-    })
-
-
     //메뉴
     document.querySelector(".ham").addEventListener("click", () => {
         document.querySelector("nav").classList.toggle("show");
     })
 
+    //선택자
+    const quiz = document.querySelector("#quiz");
+    const quizwrap = document.querySelector(".quizWrap");
+    const questionQuiz = document.querySelector(".question__quiz");
+    const questionAnswerConfirm = document.querySelector(".question__answer__confirm");
+    const questionAnswerView = document.querySelector(".question__answer__view");
+    const questionAnswerEx = document.querySelector(".question__answer__ex");
 
+
+    //문제 정보
+    const quizInfo = [
+        {
+            quizNum : 1,
+            quizAsk : "다음 중 디자인의 기본 요소들로 옳은 것은?",
+            quizChoice : {
+                1: "선, 색체, 공간, 수량",
+                2: "점, 선, 면, 질감",
+                3: "시간, 수량,구조, 공간",
+                4: "면, 구조, 공간, 수량"
+            },
+            quizAnswer : 2,
+            quizEx : "디자인의 기본 요소는 점, 선, 면, 질감으로 이루어져 있습니다."
+        },
+        {
+            quizNum : 2,
+            quizAsk : "다음 중 시각디자인의 4대 매체가 아닌 것은?",
+            quizChoice : {
+                1: "포스터 디자인",
+                2: "신문광고",
+                3: "TV 광고",
+                4: "텍스트타일 디자인"
+            },
+            quizAnswer : 4,
+            quizEx : "시각디자인의 4대 매체는 포스터 디자인, 신문광고, TV광고, 잡지광고 디자인 입니다."
+        },
+        {
+            quizNum : 3,
+            quizAsk : "다음과 가장 관계있는 디자인 원리는? [바다 위의 빨간 등대, 무성한 나뭇잎들 사이에서 핀 꽃, 별이 총총한 밤하늘에 뜬 달, 평평한 벽에 생긴 갈라진 틈 등]",
+            quizChoice : {
+                1: "조화",
+                2: "통일",
+                3: "점증",
+                4: "강조"
+            },
+            quizAnswer : 4,
+            quizEx : "두 요소의 대비를 이용한 강조 원리입니다."
+        }
+    ]
+
+    //문제 만들기
+    function updateQuiz(){
+        const output = [];
+
+        quizInfo.forEach((currentQuestion, questioinNumber) => {
+            output.push(`
+            <div class="quizwrap">
+                <h2>웹디자인 기능사 16년도 03회</h2>
+                <div class="question__quiz">
+                    <h3 class="question__title">
+                        <span class="question__title__num">${currentQuestion.quizNum}</span>
+                        <span class="question__title__ask">${currentQuestion.quizAsk}</span>
+                    </h3>
+                    <div class="question__answer">
+                        <div class="question__answer__selects">
+                            <label>
+                                <input class="select" type="radio" name="select${questioinNumber}" id="select1" value="1">
+                                <span class="choice">${currentQuestion.quizChoice[1]}</span>
+                            </label>
+                            <label>
+                                <input class="select" type="radio" name="select${questioinNumber}" id="select2" value="2">
+                                <span class="choice">${currentQuestion.quizChoice[2]}</span>
+                            </label>
+                            <label>
+                                <input class="select" type="radio" name="select${questioinNumber}" id="select3" value="3">
+                                <span class="choice">${currentQuestion.quizChoice[3]}</span>
+                            </label>
+                            <label>
+                                <input class="select" type="radio" name="select${questioinNumber}" id="select4" value="4">
+                                <span class="choice">${currentQuestion.quizChoice[4]}</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            `)
+        });
+        quiz.innerHTML = output.join(' ');
+    }
+    updateQuiz();
+
+    //결과 확인하기
+    function showResults(){
+        const questionAnswerSelects = document.querySelectorAll(".question__answer__selects");
+        let nowScore = 0;
+
+        //사용자가 클릭한 정답
+        //데이터 안의 정답 => 두개를 비교해서 정답/오답 가리기
+        quizInfo.forEach((currentQuestion, questioinNumber) => {
+            const selectContainer = questionAnswerSelects[questioinNumber];
+                const selectChecked = `input[name=select${questioinNumber}]:checked`;
+                const selectResult = (selectContainer.querySelector(selectChecked) || {}).value;
+
+            if(selectResult == currentQuestion.quizAnswer){
+                //alert("정답입니다.");
+                nowScore++;
+                selectContainer.style.color = "blue";
+            } else {
+                //alert("오답입니다.");
+                selectContainer.style.color = "red";
+                const p = document.createElement("p");
+                selectContainer.appendChild(p).innerHTML = currentQuestion.quizEx;
+            }
+        });
+        questionAnswerView.innerHTML = `${quizInfo.length} 문제 중에 ${nowScore} 문제를 맞추었습니다.`;
+        questionAnswerConfirm.style.display = "none";
+        questionAnswerView.style.display = "block";
+    }
+
+
+    //버튼 클릭
+    questionAnswerConfirm.addEventListener("click", showResults);
+    
 
 </script>
 
